# tiny_rpg_py

./: .gitignore  Management.py  README.md  project-management.org  pyproject.toml  requirements.txt  shell.nix
data/: database.db
data/gacha_data/: default.json
data/user_data/bd515186-c533-4ebf-be68-4622016afe27/: save.json
docs/: devlog.org  graveyard.org  hook.org  project-management.org
docs/graveyard/: stat_modifier.py
gdsrc/: my_test.gd
lore/: lore.org
src/: Effect.py  account.py  battle.py  character.py  effect.py  elo.py  event.py  item.py  level.py  money.py  pull manager.py  stats.py  statsv3.py  temp.org
src/tinyrpg/: banner.org  battle.py  character.py  database.py  dev_gacha.py  effect.py  elo.py  event.py  gacha.py  gen_rand.py  hook.py  level.py  main.py  stats.py  test.py  tournament.py  util.py
src/tinyrpg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_speed.py
